--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div>
             <p class="h1"></p>
         </div>
-        <div class="informacion-util ju">
+        <div class="informacion-util">
                     <p class="text-justify">
                         Somos fabricantes de herramientas engarzadas con metal duro MW,  linea de bits y cuchillas Multiwidia. También somos distribuidores oficiales de TANTAL ARGENTINA S.R.L.
                     </p>
@@ -48,7 +48,7 @@
     <div class="quienes-somos container my-4">
         <p class="h2 text-center">Quienes somos</p>
         <p class="historia text-justify">
-            Multiwidia S.A.es una empresa familiar nacida a mediados de 1998 que ha contando desde sus inicios con personal con mas de 30 años de experiencia en rubros como: Metal Duro Aceros trafilados y rectificados, herramientas de corte para la Industria maderera, herramientas standard y especiales con metal duro, Linea de Bits y cuchillas de acero al cobalto. 
+            Multiwidia S.A. es una empresa familiar nacida a mediados de 1998 que ha contando desde sus inicios con personal con mas de 30 años de experiencia en rubros como: Metal Duro Aceros trafilados y rectificados, herramientas de corte para la Industria maderera, herramientas standard y especiales con metal duro, Linea de Bits y cuchillas de acero al cobalto. 
         </p>
 
 
