--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>MW - Multiwidia S.A.</title>
 </head>
 <body>
-<!--idea como demo / idea 2 con un sticky navbar arriba o boton de subir-->
+<!--idea alternativa con un sticky navbar arriba-->
 
     <a href="https://api.whatsapp.com/send?phone=5411xxxx&text=Hola%21%20Quisiera%20consultar%20por..." class="float" target="_blank">
         <i class="fab fa-whatsapp my-float"></i>
@@ -29,49 +29,60 @@
             <img src="img/logomw.png" alt="Logo Multiwidia S.A.">
         </div>
         <div>
-            <p class="h1"></p>
+            <p class="h1">MULTIWIDIA S.A.</p>
         </div>
-        <div class="informacion-util ju">
-                    <p class="text-justify">
-                        Somos fabricantes de herramientas engarzadas con metal duro MW,  linea de bits y cuchillas Multiwidia. También somos distribuidores oficiales de TANTAL ARGENTINA S.R.L.
-                    </p>
-                    <p class="text-justify">
-                        Contamos con stock permanente, entrega inmediata, calidad garantizada
-                    </p>
-                    <p class="text-justify">
-                        Brindamos el mejor asesoramiento técnico de Buenos Aires
-                    </p>
-
+        <div class="container servicios1">
+            <div class="row justify-content-left">
+                <div class="d-flex justify-content-left text-justify serv1txt">
+                    <p>Somos fabricantes de herramientas engarzadas con metal duro MW,  linea de bits y cuchillas Multiwidia. También somos distribuidores oficiales de TANTAL ARGENTINA S.R.L.</p>
+                </div>
+                <div class="w-100"></div>
+                <div class="d-flex justify-content-left text-justify serv1txt">
+                    <p>Contamos con stock permanente, entrega inmediata, calidad garantizada</p>
+                </div>
+                <div class="w-100"></div>
+                <div class="d-flex justify-content-left text-justify serv1txt">
+                    <p>Brindamos el mejor asesoramiento técnico de Buenos Aires </p>
+                </div>
+            </div>
         </div>
-
     </div>
     <div class="quienes-somos container my-4">
         <p class="h2 text-center">Quienes somos</p>
         <p class="historia text-justify">
-            Multiwidia S.A.es una empresa familiar nacida a mediados de 1998 que ha contando desde sus inicios con personal con mas de 30 años de experiencia en rubros como: Metal Duro Aceros trafilados y rectificados, herramientas de corte para la Industria maderera, herramientas standard y especiales con metal duro, Linea de Bits y cuchillas de acero al cobalto. 
+            Multiwidia S.A. es una empresa familiar nacida a mediados de 1998 que ha contando desde sus inicios con personal con mas de 30 años de experiencia en rubros como: Metal Duro Aceros trafilados y rectificados, herramientas de corte para la Industria maderera, herramientas standard y especiales con metal duro, Linea de Bits y cuchillas de acero al cobalto. 
         </p>
-
-
+        <div class="servicios2">
+            <p class="text-justify">
+                Somos fabricantes de herramientas engarzadas con metal duro MW,  linea de bits y cuchillas Multiwidia. También somos distribuidores oficiales de TANTAL ARGENTINA S.R.L.
+            </p>
+            <p class="servicios2 text-justify">
+                Contamos con stock permanente, entrega inmediata, calidad garantizada
+            </p>
+            <p class="servicios2 text-justify"> 
+                Brindamos el mejor asesoramiento técnico de Buenos Aires
+            </p>
+        </div>
     </div>
 
     <div class="part-bottom">
-        <p class="h2 text-center">Nuestros Productos</p>
+        <h2 class="text-center my-5">Nuestros Productos</h2>
         <div class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col-4 col-md-4">
+            <div class="row justify-content-center productos">
+                <div class="col-4 col-md-4 d-flex justify-content-center product">
                     <p>Placas y barras de Metal Duro</p>
                 </div>
-                <div class="col-4 col-md-4">
+                <div class="col-4 col-md-4 d-flex justify-content-center product">
                     <p>Bits y cuchillas</p>
                 </div>
-                <div class="col-4 col-md-4">
-                    Herramientas MW
+                <div class="col-4 col-md-4 d-flex justify-content-center product">
+                    <p>Herramientas MW</p>
                 </div>
-                <div class="col-4 col-md-4">
-                    Herramientas de tornería
+                <div class="col-4 col-md-4 d-flex justify-content-center product">
+                    <p>Herramientas de tornería</p>
                 </div>
-                <div class="col-4 col-md-4">
-                    Picos para arenado
+                <div class="col-4 col-md-4 d-flex justify-content-center product">
+                    <p>Picos para arenado</p>
                 </div>
             </div>
         </div>
@@ -108,9 +119,9 @@
                                 info@multiwidia.com</a>
                         </li>
                         <li>
-                            <a href="https://api.whatsapp.com/send?phone=541135706249&text=Hola%21%20Quisiera%20consultar%20por..." target="_blank">
+                            <a href="https://api.whatsapp.com/send?phone=5411xxxxx&text=Hola%21%20Quisiera%20consultar%20por..." target="_blank">
                                 <i class="fab fa-whatsapp"></i>
-                                1135706249
+                                11XXXX
                                 </a>
                         </li>
                     </ul>
