--- a/index.html
+++ b/index.html
@@ -104,25 +104,23 @@
                     <ul class="list-inline align-items-center">
                         <li>
                             <a href="https://goo.gl/maps/JNWEaysbVnQdWuRP6" target="_blanck">
-                                <i class="fas fa-map-marker-alt"></i>
-                                XXX, CABA
+                                <i class="fas fa-map-marker-alt"></i> xxx, CABA
                             </a>
                         </li>
                         <li>
-                            <i class="fas fa-phone-alt">XXXXX</i>
+                            <i class="fas fa-phone-alt"></i> xxx
                         </li>
                         <li>
-                            <i class="fas fa-fax">XXXXXX</i>
+                            <i class="fas fa-fax"></i> xxx
                         </li>
                         <li>
-                            <i class="far fa-envelope"></i><a href="mailto:info@multiwidia.com?subject=Consulta%20Web">
-                                info@multiwidia.com</a>
+                            <a href="mailto:info@multiwidia.com?subject=Consulta%20Web"><i class="far fa-envelope"></i>
+                            info@multiwidia.com</a>
                         </li>
                         <li>
                             <a href="https://api.whatsapp.com/send?phone=5411xxxxx&text=Hola%21%20Quisiera%20consultar%20por..." target="_blank">
-                                <i class="fab fa-whatsapp"></i>
-                                11XXXX
-                                </a>
+                            <i class="fab fa-whatsapp"></i> 11xxx 
+                            </a>
                         </li>
                     </ul>
                 </div> 
