--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     <title>MW - Multiwidia S.A.</title>
 </head>
 <body>
-<!--idea alternativa con un sticky navbar arriba-->
-
     <a href="https://api.whatsapp.com/send?phone=5411xxxx&text=Hola%21%20Quisiera%20consultar%20por..." class="float" target="_blank">
         <i class="fab fa-whatsapp my-float"></i>
     </a>
@@ -91,7 +89,7 @@
     </div>
 <!--maps en castelar u oficina en villa crespo?-->
     <div class="container">
-        <div class="row d-flex justify-content-center my-3">
+        <div class="row d-flex my-3">
             <div class="col-xs-12 col-md-8 d-flex">
                 <div class="maps">
                 <p class="h2">Donde estamos</p>       
@@ -101,7 +99,7 @@
             <div class="col-xs-12 col-md-4 d-flex">
                 <div class="contact">
                     <p class="h2">Contactanos</p>
-                    <ul class="list-inline align-items-center">
+                    <ul class="list-inline">
                         <li>
                             <a href="https://goo.gl/maps/JNWEaysbVnQdWuRP6" target="_blanck">
                                 <i class="fas fa-map-marker-alt"></i> xxx, CABA
